[package]
name = "e_xviaa_a02"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
colored = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = "0.4"
