[package]
name = "e-xviaa-scanner"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
arc-swap = "1.6"
ahash = "0.8"
indicatif = "0.17"
